objects/PRT_Vehicle__c.object
<CustomObject>
    <description>Capture the assignment of a vehicle under and talent&apos;s contract</description>
    <label>Advocate Vehicle</label>
    <nameField>
        <label>Model</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advocate Vehicles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Brand_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>PRT_Contract__c</referenceTo>
        <relationshipName>Talent_Vehicles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Plate__c</fullName>
        <label>Registration Plate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Expiry_on_or_before_start</fullName>
        <active>true</active>
        <errorConditionFormula>Expiry_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>It cannot expiry before it has started.</errorMessage>
    </validationRules>
</CustomObject>